--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,5 @@
 }
 body {
   margin: 0;
+  font-family: SFRounded, ui-rounded, "SF Pro Rounded", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
