--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -49,6 +49,32 @@
     position: relative;
 }
 
+
+
+.nav-link svg {
+  z-index: -1;
+  top: 8px;
+    border-radius: 25px;
+    padding: 10px;
+    margin-left: 17px;
+  
+}
+.nav-link  {
+  z-index: 1;
+  padding: 10px 15px 10px 25px;
+  border-radius: 25px;
+}
+
+.nav-link.active svg {
+  background-color: #DBE9FF;
+  z-index: -1;
+  color: #000; 
+}
+.nav-link.active  {
+  background-color: #DBE9FF;
+  color: #000; 
+}
+
 .nav-list li svg    {
     width: 20px;
     position: absolute;
@@ -56,7 +82,13 @@
     
 }
 
-.nav-list li:hover {
+.nav-link svg:hover {
+    background-color: #DBE9FF;
+    border-radius: 25px;
+    border: none;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.nav-link:hover {
     background-color: #DBE9FF;
     border-radius: 25px;
     border: none;
@@ -121,7 +153,6 @@
         width: 150px;
         align-items: flex-start;
         border-radius: 12px;
-        height: 170px;
         padding-top: 10px;
         display: none; /* Hide by default on smaller screens */
         z-index: 1000; /* Ensure it's on top of everything else */
@@ -134,6 +165,14 @@
     .nav-list li {
         margin-left: -30px;
         width: 100%;
+        margin-bottom: -17px;
+    }
+    .nav-link svg{
+        margin-left: -0px;
+    }
+    .nav-link{
+        width: 100%;
+        margin-left: -15px;
     }
 }
 
