--- a/src/Components/Stake/Stake.css
+++ b/src/Components/Stake/Stake.css
@@ -28,12 +28,44 @@
 }
 
 .sort-btn button{
-    padding:15px 20px;
+    padding:15px 20px 15px 40px;
     border: none;
     border-radius: 25px;
     background-color: #F5F9FF;
     font-weight: 600;
-    
+    display: flex;
+    position: relative;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow for better visibility */
+}
+
+.sort-btn button:hover{
+    background-color: #DBE9FF;
+}
+.sort-btn button svg{
+    width: 20px;
+    top: 12px;
+    left: 15px;
+    position: absolute;
+    color: #60A5FA;
+
+}
+
+.loading-svg{
+    position: relative;
+    width: 20px;
+    color: #60A5FA;
+
+}
+
+.loading-svg svg{
+    position: absolute;
+    top: 10px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+.loading-svg svg{
+    transform:rotate(360);
 }
 
 .stake-left{    
@@ -50,7 +82,9 @@
     margin-top: 15px;
 }
 
-.stake-space-card{height: 100%;}
+.stake-space-card{
+    height: 100%;
+}
 
 .ss-left{
     background-color: #F1F7FF;
