--- a/src/Components/Collector/Collector.css
+++ b/src/Components/Collector/Collector.css
@@ -100,6 +100,7 @@
     border-radius: 20px;
     margin-bottom: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    overflow-x: scroll;
 }
 
 
