--- a/src/Components/Utilities/Utilities.css
+++ b/src/Components/Utilities/Utilities.css
@@ -5,7 +5,7 @@
 .utilities-con{
     padding: 105px 0;
     margin: 0 auto;
-    max-width: 95%;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -24,9 +24,10 @@
 }
 
 .utilities-text{
-    font-size: 15px;
+    font-size: 14px;
     opacity: .7;
     padding-bottom: 17px;
+    line-height: 22px;
 }
 
 .utilities-top{
@@ -89,9 +90,11 @@
 }
 
 .up-text{
-    font-size: 15px;
+    font-size: 14px;
     padding-bottom: 10px;
 }
+
+
 
 .utilities-pairs{
         display: flex;
@@ -109,12 +112,13 @@
     border: none;
     height: 25px;
     border-radius: 25px;
+    display: flex;
     font-weight: 800;
 }
 
-.metamask-table{
-    display: flex;
-    justify-content: space-between;
+.metamask-table table{
+        width: 100%;
+        border: 1px solid red;
 }
 
 .mmt-left{
@@ -141,6 +145,14 @@
     height: 25px;
     border-radius: 25px;
     font-weight: 800;
+    text-align: end;
+    width: fit-content;
+    border: 1px solid red;
+    
+    
+    
+    
+
 }
 
 .utilities-bottom-right{
@@ -242,11 +254,12 @@
     padding-left: 25px;
 }
 
-.mmt-right svg{
+
+.mmf-button svg{
     width: 15px;
     margin-right: -15px;
     color: #60A5FA;
-    position: absolute;
+    
     top: 5px;
 }
 
@@ -336,4 +349,20 @@
         width: 35%;
 
     }
+}
+
+@media (max-width: 388px) {
+
+    .upr-button{
+display: flex;
+flex-direction: column;  
+height: auto;
+padding: 0;
+align-items: center
+
+;
+
+}
+    
+    
 }
