--- a/src/Components/Stake/Stake.css
+++ b/src/Components/Stake/Stake.css
@@ -262,7 +262,7 @@
 }
 
 .create-stake button{
-    background-color: #70A5FA;
+    background-color: #93bbfb;
     border-radius: 25px;
     border: none;
     padding: 17px 12px;
@@ -273,6 +273,9 @@
     margin-top: 30px;
 }
 
+.create-stake button:hover{
+    background-color: #70A5FA
+}
 .cst-bottom p{
     font-size: .875rem;
     line-height: 1.25rem;
