--- a/src/Components/Stake/Stake.css
+++ b/src/Components/Stake/Stake.css
@@ -2,8 +2,12 @@
     background-color: #F5F9FF;
 }
 
+#dark .stake{
+    background-color: #2A3655;
+}
+
 .stake-con{
-    padding: 105px 30px;
+    padding: 105px 0px;
     margin: 0 auto;
     display: flex;
     gap: 20px;
@@ -18,9 +22,20 @@
     font-weight: 450;
     padding-bottom: 17px;
 }
+#dark .stake-head{
+    color: #fff;
+    font-size: 1.4em;
+    font-weight: 450;
+    padding-bottom: 17px;
+}
 
+#dark .stake-text{
+    color: #fafcff99;
+    opacity: .7;
+    padding-bottom: 17px;
+}
 .stake-text{
-    font-size: 15px;
+    font-size: 14px;
     opacity: .7;
     padding-bottom: 17px;
 }
@@ -42,9 +57,16 @@
     position: relative;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow for better visibility */
 }
+#dark .sort-btn button{
+    background-color: #2a3655;
+    color: #fff;
+}
 
 .sort-btn button:hover{
     background-color: #DBE9FF;
+}
+#dark .sort-btn button:hover{
+    background-color: #202537;
 }
 .sort-btn button svg{
     width: 20px;
@@ -54,11 +76,25 @@
     color: #60A5FA;
 
 }
+#dark .sort-btn button svg{
+    width: 20px;
+    top: 12px;
+    left: 15px;
+    position: absolute;
+    color: #4C7DBE;
+
+}
 
 .loading-svg{
     position: relative;
     width: 20px;
     color: #60A5FA;
+
+}
+#dark .loading-svg{
+    position: relative;
+    width: 20px;
+    color: #4C7DBE;
 
 }
 
@@ -96,7 +132,14 @@
     padding-top: 5px;
     padding-bottom: 5px;
     margin-top: 5px;
+    font-size: 14px;
 }
+
+#dark .sorting ul{
+    background-color: #395284;
+    color: #fff;
+}
+
 
 .stake .sorting:hover ul,
 .stake .sorting.active ul {
@@ -104,7 +147,7 @@
 }
 .sorting li{
     list-style: none;
-    font-size: 15px;
+    font-size: 14px;
     display: flex;
     padding:10px;
     margin-left: -30px;
@@ -124,6 +167,11 @@
 }
 .stake-left{    
     background-color: #DBE9FF;
+    padding: 20px;
+    border-radius: 25px;
+}
+#dark .stake-left{    
+    background-color: #202537;
     padding: 20px;
     border-radius: 25px;
 }
@@ -148,9 +196,28 @@
     border-top-right-radius: 25px;
 
 }
+#dark .ss-left{
+    background-color: #293452;
+    height: 50%;
+
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+
+}
 
 .ss-right{
     background-color: #ffffff;
+    height: 50%;
+    display: flex;
+    width: 100%;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+}
+#dark .ss-right{
+    background-color: #384F7F;
     height: 50%;
     display: flex;
     width: 100%;
@@ -177,11 +244,27 @@
     margin-bottom: 20px;
     border-radius: 25px;
 }
+#dark .ssr-short{
+    height: 20px;
+    width: 40%;
+    background-color: #293452;
+    margin-bottom: 20px;
+    border-radius: 25px;
+}
 
 .ssr-long{
     height: 30px;
     max-width: 90%;
     background-color: #E9F1FF;
+    margin-bottom: 20px;
+    border-radius: 25px;
+    
+
+}
+#dark .ssr-long{
+    height: 30px;
+    max-width: 90%;
+    background-color: #293452;
     margin-bottom: 20px;
     border-radius: 25px;
     
@@ -198,6 +281,11 @@
     padding: 30px 20px;
     border-radius: 25px;
 }
+#dark .stake-right-top{
+    background-color: #202537;
+    padding: 30px 20px;
+    border-radius: 25px;
+}
 
 .cst-search-head{
     display: flex;
@@ -209,6 +297,10 @@
     padding: 30px;
     border-radius: 25px;
 }
+#dark .cst-bottom{
+    background-color: #395284;
+    color: #fff;
+}
 .cst-bottom input{
     width: 92%;
     height: 3rem;
@@ -219,6 +311,12 @@
     margin-top: 10px;
     line-height: 1.5rem;
     border-color: rgba(0, 0, 0, 0.3);
+
+}
+#dark .cst-bottom input{
+    background-color: #395284;
+    
+    border-color: rgba(255, 255, 255, 0.3);
 
 }
 
@@ -245,6 +343,16 @@
   opacity: .7;
   list-style: none;
 }
+.create-stake-tab li{
+  padding: 8px 8px 19px 8px;
+  border-radius: 10px;
+  margin-top: 20px;
+  margin-bottom: -10px;
+  cursor: pointer;
+  opacity: .7;
+  list-style: none;
+  color: #fafcff99;
+}
 .create-stake-tab li:hover{
     opacity: 1;
 }
@@ -252,6 +360,12 @@
 .create-stake-tab li.active{
   background-color: #FFFFFF;
   opacity: 1;
+  
+}
+#dark .create-stake-tab li.active{
+  background-color: #395284;
+  opacity: 1;
+  color: #fff;
   
 }
 
@@ -272,9 +386,16 @@
     width: 100%;
     margin-top: 30px;
 }
+#dark .create-stake button{
+    background-color: #202537;
+    color: #fff;
+}
 
 .create-stake button:hover{
-    background-color: #70A5FA
+    background-color: #70A5FA;
+}
+#dark .create-stake button:hover{
+    background-color: #131620;
 }
 .cst-bottom p{
     font-size: .875rem;
@@ -286,9 +407,22 @@
     padding: 20px;
     border-radius: 25px;
 }
+#dark .statistics-stake{
+    background-color: #202537;
+    padding: 20px;
+    border-radius: 25px;
+}
 
 .stake-first-card{
     background-color: #FFFFFF;
+    display: flex;
+    padding: 0   20px;
+    border-radius: 20px;
+    margin-bottom: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+#dark .stake-first-card{
+    background-color: #395284;
     display: flex;
     padding: 0   20px;
     border-radius: 20px;
@@ -334,12 +468,22 @@
     font-size: 17px;
     font-weight: 400;
 }
+#dark .stake-first-card h1{
+    color: #fff;
+    opacity: .7;
+    font-size: 17px;
+    font-weight: 400;
+}
 
 
 
 .sfc-bold{
     font-weight: 700;
     font-size: 25px;
+}
+
+#dark .sfc-bold{
+    color: #fff;
 }
 
 .stake-second-card{
@@ -352,7 +496,7 @@
 }
 
 .ssc-text{
-    font-size: 15px;
+    font-size: 14px;
 }
 
 @media (min-width:1024px) {
