--- a/src/Components/Utilities/Utilities.css
+++ b/src/Components/Utilities/Utilities.css
@@ -1,6 +1,9 @@
 .utilities{
     background-color: #F5F9FF;
 }
+#dark .utilities{
+    background-color: #2A3655;
+}
 
 .utilities-con{
     padding: 105px 0;
@@ -16,14 +19,32 @@
     padding: 20px;
     border-radius: 25px;
 }
+#dark .utilities-left{
+    background-color: #202537;
+    padding: 20px;
+    border-radius: 25px;
+}
 
 .utilities h1{
     font-size: 1.4em;
     font-weight: 400;
     padding-bottom: 17px;
 }
+#dark .utilities h1{
+    color: #fff;
+    font-size: 1.4em;
+    font-weight: 400;
+    padding-bottom: 17px;
+}
 
 .utilities-text{
+    font-size: 14px;
+    opacity: .7;
+    padding-bottom: 17px;
+    line-height: 22px;
+}
+#dark .utilities-text{
+    color: #fff;
     font-size: 14px;
     opacity: .7;
     padding-bottom: 17px;
@@ -38,6 +59,12 @@
 
 .utilites-top-card{
     background-color: #FFFFFF;
+    border-radius: 25px;
+    padding: 20px;
+}
+#dark .utilites-top-card{
+    background-color: #395284;
+    color: #fff;
     border-radius: 25px;
     padding: 20px;
 }
@@ -70,6 +97,13 @@
     border-radius: 25px;
     margin-top: 17px;
 }
+#dark .utc-button{
+    background-color: #202537;
+    color: #fff;
+}
+#dark .utc-button:hover {
+    background-color: #131620;
+}
 
 .utilities-left-con{
     
@@ -87,6 +121,12 @@
     padding: 20px;
     border-radius: 25px;    
     background-color: #FFFFFF;
+}
+#dark .utilities-bottom-left{    
+    padding: 20px;
+    border-radius: 25px;    
+    background-color: #202537;
+    color: #fff;
 }
 
 .up-text{
@@ -115,6 +155,10 @@
     display: flex;
     font-weight: 800;
 }
+#dark .upr-button{
+    background-color: #202537;
+    color: #fff;
+}
 
 .metamask-table table{
         width: 100%;
@@ -142,21 +186,29 @@
 .mmf-button{
     background-color: rgba(219, 233, 255, .5);
     border: none;
-    height: 25px;
+    height: 2cap;
     border-radius: 25px;
     font-weight: 800;
     text-align: end;
     width: fit-content;
     border: 1px solid red;
+    padding-right: 10px;
+    padding-bottom: 15px;
+ }
+#dark .mmf-button{
+    background-color: #202537;
+    color: #fff;
     
-    
-    
-    
-
-}
+ }
 
 .utilities-bottom-right{
     background-color: #FFFFFF;
+    padding: 20px;
+    border-radius: 25px;
+    height: 500px;
+}
+#dark .utilities-bottom-right{
+    background-color: #395284;
     padding: 20px;
     border-radius: 25px;
     height: 500px;
@@ -168,9 +220,20 @@
     height: 80%;  
     border-radius: 25px; 
 }
+#dark .ubr-space{
+    padding: 20px;
+    background-color:#31426A;
+    height: 80%;  
+    border-radius: 25px; 
+}
 
 .utilities-right{
     background-color: #DBE9FF;
+    padding: 20px;
+    border-radius: 25px;
+}
+#dark .utilities-right{
+    background-color: #202537;
     padding: 20px;
     border-radius: 25px;
 }
@@ -225,6 +288,16 @@
     border-collapse: collapse;
     margin-top: 20px;
 }
+#dark .stake-second-card{
+    color: #fff;
+    background-color: #395284;
+}
+
+#dark .utilities-right-card{
+    color: #fff;
+    background-color: #395284;
+
+}
 .statistics-table td{
     padding: 5px;
     width: 50%;
@@ -262,13 +335,29 @@
     
     top: 5px;
 }
+#dark .mmf-button svg{
+    width: 15px;
+    margin-right: -15px;
+    color: #406598;
+    
+    top: 5px;
+}
 
 .upr-button svg{
     width: 15px;
     margin-right: -15px;
     color: #60A5FA;
 }
+#dark .upr-button svg{
+    width: 15px;
+    margin-right: -15px;
+    color: #406598;
+}
 
+#dark .utilities-bottom-left{
+    background-color: #395284;
+    color: #fff;
+}
 .utilities-bottom-left span{
     padding-left: 25px;
 }
