--- a/src/Components/Utilities/Utilities.css
+++ b/src/Components/Utilities/Utilities.css
@@ -75,7 +75,7 @@
 }
 
 .utc-text{
-    font-size: 15px;
+    font-size: 14px;
     padding-bottom: 10px;
 }
 
@@ -96,6 +96,7 @@
     font-weight: bolder;
     border-radius: 25px;
     margin-top: 17px;
+    color: #000;
 }
 #dark .utc-button{
     background-color: #202537;
@@ -153,6 +154,7 @@
     height: 25px;
     border-radius: 25px;
     display: flex;
+    color: #000;
     font-weight: 800;
 }
 #dark .upr-button{
@@ -194,6 +196,7 @@
     border: none;
     border-radius: 25px;
     font-weight: 800;
+    color: #000;
     text-align: end;
     width: max-content;
     padding: 5px 10px;
@@ -463,8 +466,6 @@ align-items: center
 @media (max-width:430px) {
 
     .metamask-table tbody:nth-last-child(1){
-        
-
         display: flex;
         flex-direction: column;
      }
