--- a/src/Components/Stake/Stake.css
+++ b/src/Components/Stake/Stake.css
@@ -304,6 +304,9 @@
     justify-content: space-between;
 }
 
+.cst-sb-right{
+    text-align: end;
+}
 .cst-bottom{
     background-color: #FFFFFF;
     padding: 30px;
@@ -336,9 +339,9 @@
     position: relative;
 }
 .stake-search img{
-  width: 45px;
+  width: 43px;
   position: absolute;
-  right: 3%;
+  right: 5%;
   top: 12px;
 }
 
@@ -355,7 +358,8 @@
   opacity: .7;
   list-style: none;
 }
-.create-stake-tab li{
+
+#dark .create-stake-tab li{
   padding: 8px 8px 19px 8px;
   border-radius: 10px;
   margin-top: 20px;
