--- a/src/Components/Collector/Collector.css
+++ b/src/Components/Collector/Collector.css
@@ -67,7 +67,10 @@
     justify-content: end;
     display: flex;
     
+    
 }
+
+
 .collect-fees{
     border: none;
     height: 3rem;
@@ -75,6 +78,8 @@
     background-color: #F5F9FF;
     padding-left: 1rem;
     padding-right: 1rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    font-weight: bolder;
 }
 #dark .collect-fees{
     color: #fff;
