--- a/src/Components/Utilities/Utilities.css
+++ b/src/Components/Utilities/Utilities.css
@@ -61,6 +61,7 @@
     background-color: #FFFFFF;
     border-radius: 25px;
     padding: 20px;
+    width: 100%;
 }
 #dark .utilites-top-card{
     background-color: #395284;
